cabal-version:      2.4
name:               leqss-compare
version:            0.1.0.0
synopsis:
    Compare the performance of different linear equation solvers

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common shared-properties
  default-language: Haskell2010
  build-depends:
    base

  ghc-options:
    -Wall
    -O2

library solvers
    import: shared-properties
    exposed-modules:
        BenchmarkData,
        Solve_matrix,
        Solve_Vec,
        Solve_ll_state,
        Solve_lu,
        Solve_vu_unsafe,
        Solve_vu_state,
        Solve_vu_unfold,
        Solve_rosetta1

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      matrix,
                      vector,
                      vector-builder,
                      Vec,
                      transformers,
                      text

    hs-source-dirs:   src

executable leqss-run
    import: shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      solvers,
                      criterion,
                      matrix,
                      vector,
                      Vec,
                      text
    hs-source-dirs:   app


executable criterion
    import: shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      solvers,
                      criterion,
                      matrix,
                      vector,
                      Vec,
                      text
    hs-source-dirs:   criterion

test-suite test
    import: shared-properties
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    Other-Modules:    LeqssSpec,
                      Utils
    build-depends:
                      base,
                      hspec,
                      solvers,
                      criterion,
                      matrix,
                      vector,
                      Vec,
                      text
